# geodata-calibration

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
src/geodata_calibration/: utils.py
src/geodata_calibration/.ipynb_checkpoints/: utils-checkpoint.py
tests/: test_utils.py
tests/.ipynb_checkpoints/: test_utils-checkpoint.py
